--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-starter",
+  "name": "latest-next-js-boilerplate",
   "version": "0.1.0",
-  "author": "Emanuel Lorenzo <@emalorenzo_>",
+  "author": "Anwar Hossain",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -21,35 +21,35 @@
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^13.1.5",
-    "@next/font": "^13.1.5",
-    "next": "^13.1.5",
+    "@next/bundle-analyzer": "^13.1.6",
+    "@next/font": "^13.1.6",
+    "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^12.0.10",
-    "@types/node": "^14.11.8",
-    "@types/react": "^16.9.52",
-    "@typescript-eslint/eslint-plugin": "^4.4.1",
-    "@typescript-eslint/parser": "^4.4.1",
+    "@next/eslint-plugin-next": "^13.1.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.12",
-    "eslint": "^7.11.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.12.0",
-    "eslint-import-resolver-typescript": "^2.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.4.0",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.33.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
-    "prettier": "^2.1.2",
-    "typescript": "^4.5.5"
+    "prettier": "^2.8.3",
+    "typescript": "^4.9.5"
   }
 }
