--- a/package.json
+++ b/package.json
@@ -12,13 +12,9 @@
     "prettier": "prettier -l \"src/**/*.{js,jsx,md,ts,tsx}\"",
     "lint": "yarn prettier && yarn eslint"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache",
+    "*.{js,jsx,ts,tsx,md,html,css,scss}": "yarn lint"
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.1.6",
