--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     }
   },
   "dependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
     "@next/bundle-analyzer": "^13.1.6",
     "@next/font": "^13.1.6",
     "next": "^13.1.6",
@@ -58,6 +56,9 @@
     "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2"
   }
 }
