FIx: COmmit rule

--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "*.{js,jsx,md,ts,tsx,html,css,scss}": "yarn prettier",
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@next/bundle-analyzer": "^13.1.6",
     "@next/font": "^13.1.6",
