chore: setup husky and commitlint for commit messages

--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -e $HUSKY_GIT_PARAMS"
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
-  },
+  },  
   "dependencies": {
     "@next/bundle-analyzer": "^13.1.6",
     "@next/font": "^13.1.6",
