--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "prettier": "prettier --write .",
     "lint": "yarn eslint && yarn prettier",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
-    "postinstall": "./node_modules/.bin/husky install"
+    "postinstall": "./node_modules/.bin/husky install",
+    "postbuild": "next-sitemap",
+    "prepare": "husky install"
   },
   "lint-staged": {
     "*.{js,jsx,md,ts,tsx,html,css,scss}": "yarn prettier",
@@ -27,6 +29,8 @@
     "@next/bundle-analyzer": "^13.1.6",
     "@next/font": "^13.1.6",
     "next": "^13.1.6",
+    "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.49",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
