--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "latest-next-js-boilerplate",
+  "name": "next-js-blog",
   "version": "0.1.0",
   "author": "Anwar Hossain",
   "license": "MIT",
@@ -30,23 +30,24 @@
     "@next/font": "^13.1.6",
     "next": "^13.1.6",
     "next-seo": "^5.15.0",
-    "next-sitemap": "^3.1.49",
+    "next-sitemap": "^3.1.52",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.6"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@commitlint/cli": "^17.4.3",
+    "@commitlint/config-conventional": "^17.4.3",
     "@next/eslint-plugin-next": "^13.1.6",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.27",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "autoprefixer": "^10.4.13",
-    "cssnano": "^5.1.14",
-    "eslint": "^8.33.0",
+    "cssnano": "^5.1.15",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
@@ -56,9 +57,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
+    "lint-staged": "^13.1.2",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
+    "prettier": "^2.8.4",
     "typescript": "^4.9.5"
   }
 }
