--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.2.4",
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
+    "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "next": "^13.2.4",
     "next-seo": "^5.15.0",
@@ -35,15 +39,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.9",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.5.0",
     "@commitlint/config-conventional": "^17.4.4",
     "@next/eslint-plugin-next": "^13.2.4",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.6",
     "@types/react": "^18.0.28",
     "@types/styled-components": "^5.1.26",
+    "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "autoprefixer": "^10.4.14",
