--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-blog",
+  "name": "next-js-boilerplate",
   "version": "0.1.0",
   "author": "Anwar Hossain",
   "license": "MIT",
@@ -34,11 +34,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "next": "^13.2.4",
-    "next-seo": "^5.15.0",
-    "next-sitemap": "^4.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.9",
     "tailwindcss": "^3.2.7",
     "winston": "^3.8.2"
   },
