--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "*.{js,jsx,ts,tsx}": "eslint --cache --fix --cache-location ./node_modules/.cache/.eslintcache"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
     "@next/bundle-analyzer": "^13.3.0",
-    "@types/cookie": "^0.5.1",
+    "@prisma/client": "^4.12.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cookie": "^0.5.0",
@@ -36,27 +38,32 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "next": "^13.3.0",
+    "next-auth": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.8.0",
     "tailwindcss": "^3.3.1",
-    "winston": "^3.8.2"
+    "winston": "^3.8.2",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.5.1",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@next/eslint-plugin-next": "^13.3.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/styled-components": "^5.1.26",
+    "@types/react": "^18.0.35",
     "@types/winston": "^2.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.0",
-    "eslint": "^8.37.0",
+    "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -66,9 +73,10 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.0",
-    "postcss": "^8.4.21",
+    "lint-staged": "^13.2.1",
+    "postcss": "^8.4.22",
     "prettier": "^2.8.7",
-    "typescript": "^5.0.2"
+    "prisma": "^4.12.0",
+    "typescript": "^5.0.4"
   }
 }
