feat: added next-auth session and logout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,5 @@
   "css.lint.unknownAtRules": "ignore",
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "cSpell.words": [
-    "commitlint",
-    "cssnano",
-    "nextauth",
-    "tailwindcss"
-  ]
+  "cSpell.words": ["commitlint", "cssnano", "nextauth", "tailwindcss"]
 }
