feat: update dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
 ANALYZE=false
-NEXT_MONGODB_URI=
-NEXT_ACCESS_TOKEN_SECRET=
-NEXT_REFRESH_TOKEN_SECRET=
+MONGODB_URI=
+ACCESS_TOKEN_SECRET=
+REFRESH_TOKEN_SECRET=
+GITHUB_ID=
+GITHUB_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+NODE_ENV=
+NEXTAUTH_SECRET=
