--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "devTurbo": "next dev --turbo",
+    "devt": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "analyze": "ANALYZE=true next build",
@@ -27,54 +27,56 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^13.4.4",
-    "@prisma/client": "^4.15.0",
+    "@next/bundle-analyzer": "^13.4.10",
+    "@prisma/client": "^5.0.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "config": "^3.3.9",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.2.2",
-    "next": "^13.4.4",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.3.4",
+    "ms": "^2.1.3",
+    "next": "^13.4.10",
     "next-auth": "^4.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.44.3",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.9.0",
-    "tailwindcss": "^3.3.2",
-    "winston": "^3.9.0",
-    "zustand": "^4.3.8"
+    "react-icons": "^4.10.1",
+    "tailwindcss": "^3.3.3",
+    "winston": "^3.10.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.5",
-    "@commitlint/config-conventional": "^17.6.5",
-    "@next/eslint-plugin-next": "^13.4.4",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
+    "@next/eslint-plugin-next": "^13.4.10",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.2.5",
-    "@types/react": "^18.2.8",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "autoprefixer": "^10.4.14",
     "cssnano": "^6.0.1",
-    "eslint": "^8.42.0",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
+    "lint-staged": "^13.2.3",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
-    "prisma": "^4.15.0",
-    "typescript": "^5.1.3"
+    "prettier": "^3.0.0",
+    "prisma": "^5.0.0",
+    "typescript": "^5.1.6"
   }
 }
