--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-node_modules
+/node_modules
 /.pnp
 .pnp.js
 
@@ -9,11 +9,11 @@ node_modules
 /coverage
 
 # next.js
-.next/
+/.next/
 /out/
 
 # production
-build/
+/build
 
 # misc
 .DS_Store
@@ -25,15 +25,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env*.local
 
 # vercel
 .vercel
-.env
 
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 yarn.lock
-
-/application-log
