--- a/package.json
+++ b/package.json
@@ -1,13 +1,7 @@
 {
-  "name": "next-js-boilerplate",
+  "name": "latest-next-boilerplate",
   "version": "0.1.0",
-  "author": "Anwar Hossain",
-  "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0",
-    "yarn": ">=1.22.0",
-    "npm": "please-use-yarn"
-  },
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "devt": "next dev --turbo",
@@ -30,53 +24,42 @@
     "@next/bundle-analyzer": "^13.4.19",
     "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
     "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.5",
-    "ms": "^2.1.3",
-    "next": "^13.4.19",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "next": "13.4.19",
     "next-auth": "^4.23.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "3.3.3",
     "winston": "^3.10.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
-    "@next/eslint-plugin-next": "^13.4.19",
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.3",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/ms": "^0.7.31",
-    "@types/node": "^20.5.7",
-    "@types/react": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^6.5.0",
-    "@typescript-eslint/parser": "^6.5.0",
+    "@types/node": "20.5.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "autoprefixer": "^10.4.15",
     "cssnano": "^6.0.1",
-    "eslint": "^8.48.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
     "prisma": "^5.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "5.2.2"
   }
 }
