feat: convert to bun as runtime

--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "lint": "yarn eslint && yarn prettier",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
     "postbuild": "next-sitemap && yarn prisma generate",
-    "prepare": "husky install",
     "postinstall": "yarn prisma generate"
   },
   "lint-staged": {
@@ -26,31 +25,20 @@
     "@next/bundle-analyzer": "^13.4.19",
     "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
-    "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
-    "cookie": "^0.5.0",
     "date-fns": "^2.30.0",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "next": "13.4.19",
-    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
-    "winston": "^3.10.0",
-    "zustand": "^4.4.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
     "@next/eslint-plugin-next": "^13.4.19",
-    "@types/bcryptjs": "^2.4.3",
-    "@types/cookie": "^0.5.2",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
