--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "next-js-boilerplate",
+  "name": "nextjs-14-template",
   "version": "0.1.0",
   "author": "Anwar Hossain",
   "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "devt": "next dev --turbo",
@@ -28,38 +29,29 @@
     "config": "^3.3.9",
     "date-fns": "^2.30.0",
     "mongoose": "^7.6.3",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "14.0.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
-    "tailwindcss": "3.3.3",
+    "react-icons": "^4.11.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.8.1",
     "@commitlint/config-conventional": "^17.8.1",
-    "@next/eslint-plugin-next": "^13.5.6",
-    "@types/node": "20.8.7",
-    "@types/react": "18.2.31",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.1",
-    "eslint": "^8.52.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
-    "postcss": "^8.4.29",
+    "postcss": "^8",
     "prettier": "^3.0.3",
     "prisma": "^5.4.2",
-    "typescript": "5.2.2"
+    "tailwindcss": "^3",
+    "typescript": "^5"
   }
 }
