--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "author": "Anwar Hossain",
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "next dev",
     "devt": "next dev --turbo",
@@ -23,35 +26,34 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^13.5.6",
-    "@prisma/client": "^5.4.2",
-    "axios": "^1.5.0",
+    "@next/bundle-analyzer": "^14.0.2",
+    "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
     "config": "^3.3.9",
     "date-fns": "^2.30.0",
-    "mongoose": "^7.6.3",
-    "next": "14.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.47.0",
+    "next": "14.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.8.1",
-    "@commitlint/config-conventional": "^17.8.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "@commitlint/cli": "^18.4.1",
+    "@commitlint/config-conventional": "^18.4.0",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.53.0",
+    "eslint-config-next": "14.0.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
-    "postcss": "^8",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
-    "prisma": "^5.4.2",
+    "prisma": "^5.5.2",
     "tailwindcss": "^3",
-    "typescript": "^5"
+    "typescript": "^5.2.2"
   }
 }
