--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "tailwindcss": "^3"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.1",
@@ -53,7 +54,6 @@
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prisma": "^5.5.2",
-    "tailwindcss": "^3",
     "typescript": "^5.2.2"
   }
 }
