--- a/package.json
+++ b/package.json
@@ -26,39 +26,39 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^14.1.4",
-    "@prisma/client": "^5.11.0",
-    "axios": "^1.6.8",
-    "config": "^3.3.11",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@prisma/client": "^5.18.0",
+    "axios": "^1.7.4",
+    "config": "^3.3.12",
     "date-fns": "^3.6.0",
-    "next": "14.1.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.1",
+    "next": "14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "winston": "^3.13.0",
-    "tailwindcss": "^3.4.1"
+    "react-icons": "^5.3.0",
+    "winston": "^3.14.1",
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^18.6.3",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.70",
-    "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.4.0",
-    "autoprefixer": "^10.4.17",
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@types/node": "^22.3.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.12.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "14.1.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
-    "prisma": "^5.11.0"
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.9",
+    "postcss": "^8.4.41",
+    "prettier": "^3.3.3",
+    "typescript": "^5.5.4",
+    "prisma": "^5.18.0"
   }
 }
