--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/bundle-analyzer": "^14.2.5",
     "@prisma/client": "^5.18.0",
+    "@tanstack/react-query": "^5.55.4",
+    "@tanstack/react-query-devtools": "^5.55.4",
     "axios": "^1.7.4",
     "config": "^3.3.12",
     "date-fns": "^3.6.0",
@@ -37,8 +39,8 @@
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "winston": "^3.14.1",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.10",
+    "winston": "^3.14.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.4.0",
@@ -58,7 +60,7 @@
     "lint-staged": "^15.2.9",
     "postcss": "^8.4.41",
     "prettier": "^3.3.3",
-    "typescript": "^5.5.4",
-    "prisma": "^5.18.0"
+    "prisma": "^5.18.0",
+    "typescript": "^5.5.4"
   }
 }
