--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "node": ">=20.0.0"
   },
   "scripts": {
-    "dev": "next dev",
-    "devt": "next dev --turbo",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "analyze": "ANALYZE=true next build",
@@ -26,28 +25,28 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@next/bundle-analyzer": "^14.2.5",
-    "@prisma/client": "^5.18.0",
-    "@tanstack/react-query": "^5.55.4",
-    "@tanstack/react-query-devtools": "^5.55.4",
-    "axios": "^1.7.4",
+    "@next/bundle-analyzer": "^15.0.1",
+    "@prisma/client": "^5.21.1",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
+    "axios": "^1.7.7",
     "config": "^3.3.12",
-    "date-fns": "^3.6.0",
-    "next": "14.2.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.2",
+    "date-fns": "^4.1.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next": "15.0.1",
+    "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.14",
     "winston": "^3.14.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.4.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@types/node": "^22.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@types/node": "^22.8.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "7.12.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
@@ -56,11 +55,11 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "husky": "^9.1.4",
-    "lint-staged": "^15.2.9",
-    "postcss": "^8.4.41",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
-    "prisma": "^5.18.0",
+    "prisma": "^5.21.1",
     "typescript": "^5.5.4"
   }
 }
